Added Bootstrap for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <!-- HELP WITH MOBILE RESPONSIVENESS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" type ="text/css" href="style.css"></style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator in JavaScript</title>
+
   </head>
   <body>
     <div class='container'>
@@ -10,7 +15,7 @@
 
       <!-- RESULT BOX -->
 
-      <div id='result' class='text-right'>
+      <div id='resultbox' class='text-right'>
         <div id='entry'>
           <p id='answer'>0</p>
         </div>
@@ -49,7 +54,5 @@
       </div>
     </div>
   </div>
-
-
   </body>
 </html>
