Positioned buttons correctly

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button value='8'>8</button>
         <button value='9'>9</button>
         <button value='+'>+</button>
-        <div id='Saved'>Saved Math</div>
+        <div id='saved'>Saved Math</div>
         <button value='4'>4</button>
         <button value='5'>5</button>
         <button value='6'>6</button>
@@ -44,12 +44,12 @@
         <button value='*'>*</button>
         <br>
         <button value='0'>0</button>
-        <button value='Save'>Save</button>
-        <button value='Cancel'>Cancel</button>
-        <button value='/'>/</button>
+        <button id="save-button" value='Save'>Save</button>
+        <button id="cancel-button" value='Cancel'>Cancel</button>
+        <button id="divide-button" value='/'>/</button>
         <br>
         <button value='.'>.</button>
-        <button value='='>=</button>
+        <button id="equal-button" value='='>=</button>
 
       </div>
     </div>
