Added jQuery, calculator can show history of the number one being clicked

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button value='6'>6</button>
         <button value='-'>-</button>
         <br>
-        <button value='1'>1</button>
+        <button id='1'>1</button>
         <button value='2'>2</button>
         <button value='3'>3</button>
         <button value='*'>*</button>
@@ -54,5 +54,10 @@
       </div>
     </div>
   </div>
+
+  <script src="jquery.js"></script>
+  <script src="interface.js"></script>
+  <script src="calculator.js"></script>
+  
   </body>
 </html>
