--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
 
       <div id='buttons'>
 
-        <button value='7'>7</button>
-        <button value='8'>8</button>
-        <button value='9'>9</button>
-        <button value='+'>+</button>
+        <button class='button'>7</button>
+        <button class='button'>8</button>
+        <button class='button'>9</button>
+        <button class='button'>+</button>
         <div id='saved'>Saved Math</div>
-        <button value='4'>4</button>
-        <button value='5'>5</button>
-        <button value='6'>6</button>
-        <button value='-'>-</button>
+        <button class='button'>4</button>
+        <button class='button'>5</button>
+        <button class='button'>6</button>
+        <button class='button'>-</button>
         <br>
-        <button id='1'>1</button>
-        <button value='2'>2</button>
-        <button value='3'>3</button>
-        <button value='*'>*</button>
+        <button class='button'>1</button>
+        <button calss='button'>2</button>
+        <button class='button'>3</button>
+        <button class='button'>*</button>
         <br>
-        <button value='0'>0</button>
+        <button class='button'>0</button>
         <button id="save-button" value='Save'>Save</button>
         <button id="cancel-button" value='Cancel'>Cancel</button>
         <button id="divide-button" value='/'>/</button>
         <br>
-        <button value='.'>.</button>
+        <button class='button'>.</button>
         <button id="equal-button" value='='>=</button>
 
       </div>
@@ -58,6 +58,6 @@
   <script src="jquery.js"></script>
   <script src="interface.js"></script>
   <script src="calculator.js"></script>
-  
+
   </body>
 </html>
