Created first 2 tests for result and history

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     </div>
   </div>
 
-  <script src="jquery.js"></script>
-  <script src="interface.js"></script>
-  <script src="calculator.js"></script>
+  <script src="src/jquery.js"></script>
+  <script src="src/interface.js"></script>
+  <script src="src/calculator.js"></script>
 
   </body>
 </html>
