Removed commas from the history shown on calculator

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button class='button'>-</button>
         <br>
         <button class='button'>1</button>
-        <button calss='button'>2</button>
+        <button class='button'>2</button>
         <button class='button'>3</button>
         <button class='button'>*</button>
         <br>
