--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p id='answer'>0</p>
         </div>
         <div id='history'>
-          <p>0</p>
+          <p></p>
         </div>
       </div>
 
@@ -46,7 +46,7 @@
         <button class='button'>0</button>
         <button id="save-button" value='Save'>Save</button>
         <button id="cancel-button" value='Cancel'>Cancel</button>
-        <button id="divide-button" value='/'>/</button>
+        <button class='button' id="divide-button" value='/'>/</button>
         <br>
         <button class='button'>.</button>
         <button id="equal-button" value='='>=</button>
