--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <button class='button'>8</button>
         <button class='button'>9</button>
         <button class='button'>+</button>
-        <div id='saved'>Saved Math</div>
+        <div id="saved-title"><span>Saved Math</span>
+          <p id='saved'></p><br>
+        </div>
         <button class='button'>4</button>
         <button class='button'>5</button>
         <button class='button'>6</button>
