List can be toggled to show save lists or not. Saved Maths can be deleted by clicking the x button. CSS needs work

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class='button'>8</button>
         <button class='button'>9</button>
         <button class='button'>+</button>
-        <button id="saved-math">Saved Math</button>
+        <button id="saved-math">Saved Maths (Toggle Show/Don't Show)</button>
         <button class='button'>4</button>
         <button class='button'>5</button>
         <button class='button'>6</button>
@@ -54,8 +54,8 @@
       </div>
     </div>
 
-  <ul id="list-saved-maths">
-  </ul>
+    <ul id="list-saved-maths">
+    </ul>
 
   </div>
 
